Fixed overflow in room and user names && user login

--- a/client/source/layouts/Header/Header.scss
+++ b/client/source/layouts/Header/Header.scss
@@ -21,6 +21,10 @@
     &__name {
       font-weight: bold;
       margin-right: 8px;
+
+      width: $aside-max-width - 32px;
+      overflow: hidden;
+      text-overflow: ellipsis;
     }
 
     &__btn {
