--- a/client/source/layouts/Main/UserList/UserList.scss
+++ b/client/source/layouts/Main/UserList/UserList.scss
@@ -19,6 +19,12 @@
 
   &__entry {
     @extend .list-entry;
+
+    &__name {
+      width: $aside-max-width - 32px;
+      overflow: hidden;
+      text-overflow: ellipsis;
+    }
   }
 }
 
